# HGQ2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mlpmixer.py  pyproject.toml
docs/: conf.py  faq.md  getting_started.md  index.rst  install.md
example/: small_jet_tagger.ipynb
qkeras_next/: __init__.py
qkeras_next/layers/: __init__.py  activation.py  batch_normalization.py  conv.py  einsum_dense_batchnorm.py  multi_head_attention.py  softmax.py
qkeras_next/layers/core/: __init__.py  base.py  conv.py  dense.py  einsum_dense.py
qkeras_next/layers/ops/: __init__.py  accum.py  merge.py
qkeras_next/quantizer/: base.py  config.py  fixed_point_ops.py  fixed_point_quantizer.py  float_point_ops.py  float_point_quantizer.py  quantizer.py
qkeras_next/utils/: __init__.py  constraints.py  misc.py  regularizers.py
qkeras_next/utils/config/: __init__.py  layer.py  quantizer.py
qkeras_next/utils/sugar/: __init__.py  beta_scheduler.py  dataset.py  ebops.py  pbar.py
src/hgq/constraints/: __init__.py
src/hgq/layers/: __init__.py  activation.py  batch_normalization.py  conv.py  einsum_dense_batchnorm.py  linear_attention.py  multi_head_attention.py
src/hgq/layers/core/: base.py  dense.py  einsum_dense.py
src/hgq/layers/ops/: accum.py  einsum.py  merge.py
src/hgq/layers/rnn/: simple_rnn.py
src/hgq/quantizer/: config.py  quantizer.py
src/hgq/quantizer/internal/: base.py  fixed_point_quantizer.py
src/hgq/regularizers/: __init__.py
src/hgq/utils/: __init__.py  dataset.py  minmax_trace.py
src/hgq/utils/sugar/: __init__.py  beta_pid.py  early_stopping_ebops.py
src/qkeras/initializers/: __init__.py  initializer.py
src/qkeras/layers/: __init__.py
src/qkeras/qlayers/: __init__.py  __init__.pyi
src/qkeras/quantizers/: __init__.py  frozen_quantizer.py  quantized_bits.py
src/squark/: __init__.py
src/squark/config/: layer.py  quantizer.py
src/squark/constraints/: __init__.py
src/squark/layers/: __init__.py  activation.py  batch_normalization.py  conv.py  einsum_dense_batchnorm.py  multi_head_attention.py  softmax.py
src/squark/layers/core/: __init__.py  base.py  dense.py  einsum_dense.py
src/squark/layers/ops/: __init__.py  accum.py  einsum.py  merge.py
src/squark/layers/rnn/: simple_rnn.py
src/squark/quantizer/: __init__.py  base.py  config.py  fixed_point_quantizer.py  quantizer.py
src/squark/quantizer/internal/: __init__.py  base.py  fixed_point_ops.py  fixed_point_quantizer.py  float_point_quantizer.py
src/squark/regularizers/: __init__.py
src/squark/utils/: __init__.py  constraints.py  minmax_trace.py  misc.py  regularizers.py
src/squark/utils/config/: quantizer.py
src/squark/utils/sugar/: __init__.py  beta_scheduler.py  dataset.py  ebops.py  pbar.py
test/: test_quantizer_match.py  test_stateless_quantizer.py
test/cpp_source/: quantizers.h
test/cpp_source/ap_types/: ap_float.h
tests/: base.py  conftest.py  test_activation.py  test_batchnorm.py  test_conv.py  test_dense.py  test_mha.py  test_ops.py  test_pooling.py
