[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=67.8", "setuptools-scm>=8" ]

[project]
name = "hgq2"
version = "0.1.0"
description = "High Granularity Quantization 2"
readme = "README.md"
keywords = [ "hls4ml", "keras", "qkeras", "quantization" ]

license = { text = "GNU Lesser General Public License v3 (LGPLv3)" }
authors = [ { name = "Chang Sun", email = "chsun@cern.ch" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

optional-dependencies.dependencies = [ "keras>=3", "quantizers>=1.1" ]
optional-dependencies.docs = [
  "myst-parser",
  "pyparsing",
  "sphinx",
  "sphinx-rtd-theme",
]
optional-dependencies.test = [
  "cppyy",
  "jax",
  "pyparsing",
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-sugar",
  "pytest-xdist",
]
urls.repository = "https://github.com/calad0i/HGQ2"

[tool.setuptools]
packages = [ "hgq", "qkeras" ]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools_scm]
write_to = "src/hgq/_version.py"

[tool.ruff]
target-version = "py310"

line-length = 130
indent-width = 4

include = [ "src/hgq/**/*.py", "src/qkeras/**/*.py" ]

format.indent-style = "space"
format.quote-style = "single"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = 130
format.docstring-code-format = true
lint.select = [ "E", "F", "F401", "I", "W" ]
lint.ignore = [ "E501", "F403", "F405" ]
lint.explicit-preview-rules = true
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:WARNING\\W Pytorch converter is not enabled!:UserWarning",
  "ignore:.\\[93mcover_factor<1.0 will likely to result in overflows:UserWarning",
  "ignore:You are saving your model as an HDF5 file:UserWarning",
  "ignore:Even though the `tf.config.experimental_run_functions_eagerly`:UserWarning",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
  "ignore:distutils Version classes are deprecated:DeprecationWarning",
  "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
]

env = [
  "KERAS_BACKEND=jax",
  "JAX_PLATFORMS=cpu",
  "CUDA_VISIBLE_DEVICES=-1",
  "CLING_ENABLE_CUDA=0",
]

addopts = "--import-mode=importlib --cov=src/hgq --cov-report=xml --cov-report=html"

[tool.coverage.run]
omit = [ "*/_version.py" ]
